--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="http://localhost:3000/favicon.ico?v=2" />
+    <link rel="icon" href="http://localhost:3000/favicon.ico" />
     <meta name="cartman" />
 
     <title>Cart Man</title>
